- Adds support for deleting list items - Adds support for filtering list items - Adds support for deleting all list items - Adds animations in preparation for localstorage

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
       integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
       crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
+      referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css" />
     <title>Shopping List</title>
   </head>
@@ -22,31 +21,18 @@
       </header>
       <form id="item-form">
         <div class="form-control">
-          <input
-            type="text"
-            class="form-input"
-            id="item-input"
-            name="item"
-            placeholder="Enter Item"
-          />
+          <input type="text" class="form-input" id="item-input" name="item" placeholder="Enter Item" />
         </div>
         <div class="form-control">
-          <button type="submit" class="btn">
-            <i class="fa-solid fa-plus"></i> Add Item
-          </button>
+          <button type="submit" class="btn"><i class="fa-solid fa-plus"></i> Add Item</button>
         </div>
       </form>
 
-      <div class="filter">
-        <input
-          type="text"
-          class="form-input-filter"
-          id="filter"
-          placeholder="Filter Items"
-        />
+      <div class="filter hideOpacity" id="filter-input">
+        <input type="text" class="form-input-filter" id="filter" placeholder="Filter Items" />
       </div>
 
-      <ul id="item-list" class="items">
+      <ul id="item-list" class="items hideOpacity">
         <li>
           Apples
           <button class="remove-item btn-link text-red">
@@ -73,7 +59,7 @@
         </li>
       </ul>
 
-      <button id="clear" class="btn-clear">Clear All</button>
+      <button id="clear" class="btn-clear hideOpacity">Clear All</button>
     </div>
 
     <script src="script.js"></script>
