- Changes the files to modules - Extracts the storage manager logic to a module - Adds logic to enter into edit mode

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <input type="text" class="form-input" id="item-input" name="item" placeholder="Enter Item" />
         </div>
         <div class="form-control">
-          <button type="submit" class="btn"><i class="fa-solid fa-plus"></i> Add Item</button>
+          <button type="submit" class="btn" id="submitBtn"><i class="fa-solid fa-plus"></i> Add Item</button>
         </div>
       </form>
 
@@ -44,6 +44,6 @@
       <button id="clear" class="btn-clear hideOpacity">Clear All</button>
     </div>
 
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
   </body>
 </html>
